feat: common module -> creating utils